# cube-maker-archived

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: cube.h  mesh.h  objects.h  outline.frag  plane-outline.frag  shader.frag  shader.h  shader.vert  wall.frag  wood.frag
